Solved problem with product many colors wrap condition

--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -213,6 +213,7 @@ hr {
   
   .color-boxes {
     display: flex;
+    flex-wrap: wrap;
     gap: 15px;
     margin-top: 10px;
   }
